--- a/src/app/pages/main/home/home.component.html
+++ b/src/app/pages/main/home/home.component.html
@@ -1,24 +1,12 @@
 <!-- Hero Carousel -->
-
+<div class="my-4">
+  <app-home-hero-banner />
+</div>
 <!-- Hero Banner -->
-
-@if (allCategories) {
-<owl-carousel-o [options]="customOptions">
-  @for (category of allCategories.data; track category._id) {
-  <ng-template carouselSlide>
-    <div>
-      {{ $index }}
-      <img
-        class="h-[250px] w-full object-cover object-center"
-        [src]="category.image"
-        alt="blog"
-      />
-      <p>{{ category.name }}</p>
-    </div>
-  </ng-template>
-  }
-</owl-carousel-o>
-}
-
+<div class="my-4">
+  <app-home-second-banner />
+</div>
 <!-- Products -->
-<app-home-products [allProducts]="allProducts"></app-home-products>
+<div class="my-4">
+  <app-home-products [allProducts]="allProducts" />
+</div>
