--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -7,15 +7,13 @@
     <div class="flex space-x-2 my-3">
       <input
         type="email"
-        id="email"
+        id="email123"
         class="bg-gray-50 border w-[80%] border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block p-2"
         placeholder="name@flowbite.com"
         required
       />
 
-      <button class="px-3 py-2 bg-green-700 text-white rounded w-[30%]">
-        Share App Link
-      </button>
+      <button class="px-3 py-2 btn-main rounded w-[30%]">Share App Link</button>
     </div>
     <!-- Footer Payment -->
     <div
