--- a/src/app/pages/main/home/home-products/home-products.component.html
+++ b/src/app/pages/main/home/home-products/home-products.component.html
@@ -1,7 +1,18 @@
 @if (allProducts) {
 <div class="container mx-auto">
+  <div class="relative my-4 w-1/2 mx-auto">
+    <label for="email" class="leading-7 text-sm text-gray-600">search</label>
+    <input
+      [(ngModel)]="searchValue"
+      type="search"
+      id="email"
+      name="email"
+      class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+    />
+  </div>
   <div class="grid lg:grid-cols-4">
-    @for (products of allProducts.data; track $index) {
+    @for (products of allProducts.data | searchProducts:searchValue ; track
+    $index) {
     <app-proudcts-card [products]="products"></app-proudcts-card>
     }
   </div>
